// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItems Selectors should not mutate items 1`] = `
Array [
  Object {
    "label": "No Children",
    "route": Object {
      "condition": [Function],
      "path": "/no/children",
    },
    "to": "/no/children",
  },
  Object {
    "condition": [Function],
    "label": "With Nav Condition",
    "route": Object {
      "path": "/nav/condition",
    },
    "to": "/nav/condition",
  },
  Object {
    "label": "No Condition",
    "route": Object {
      "path": "/no/condition",
    },
    "to": "/no/condition",
  },
]
`;

exports[`NavItems Selectors should not mutate items 2`] = `
Array [
  Object {
    "label": "No Children",
    "route": Object {
      "condition": [Function],
      "path": "/no/children",
    },
    "to": "/no/children",
  },
  Object {
    "condition": [Function],
    "label": "With Nav Condition",
    "route": Object {
      "path": "/nav/condition",
    },
    "to": "/nav/condition",
  },
  Object {
    "children": Array [
      Object {
        "label": "Child A",
        "route": Object {
          "condition": [Function],
          "path": "/child/a",
        },
        "to": "/child/a",
      },
      Object {
        "label": "Child B",
        "route": Object {
          "condition": [Function],
          "path": "/child/b",
        },
        "to": "/child/b",
      },
      Object {
        "label": "Child C",
        "route": Object {
          "condition": [Function],
          "path": "/child/c",
        },
        "to": "/child/c",
      },
    ],
    "label": "With Children",
    "route": Object {
      "condition": [Function],
      "path": "/with/children",
    },
    "to": "/with/children",
  },
  Object {
    "label": "No Condition",
    "route": Object {
      "path": "/no/condition",
    },
    "to": "/no/condition",
  },
]
`;

exports[`NavItems Selectors should remove a parent and all of its children if parent is blocked 1`] = `
Array [
  Object {
    "label": "No Children",
    "route": Object {
      "condition": [Function],
      "path": "/no/children",
    },
    "to": "/no/children",
  },
  Object {
    "condition": [Function],
    "label": "With Nav Condition",
    "route": Object {
      "path": "/nav/condition",
    },
    "to": "/nav/condition",
  },
  Object {
    "label": "No Condition",
    "route": Object {
      "path": "/no/condition",
    },
    "to": "/no/condition",
  },
]
`;

exports[`NavItems Selectors should remove a parent if all children are blocked 1`] = `
Array [
  Object {
    "label": "No Children",
    "route": Object {
      "condition": [Function],
      "path": "/no/children",
    },
    "to": "/no/children",
  },
  Object {
    "condition": [Function],
    "label": "With Nav Condition",
    "route": Object {
      "path": "/nav/condition",
    },
    "to": "/nav/condition",
  },
  Object {
    "label": "No Condition",
    "route": Object {
      "path": "/no/condition",
    },
    "to": "/no/condition",
  },
]
`;

exports[`NavItems Selectors should remove blocked parents and children 1`] = `
Array [
  Object {
    "condition": [Function],
    "label": "With Nav Condition",
    "route": Object {
      "path": "/nav/condition",
    },
    "to": "/nav/condition",
  },
  Object {
    "children": Array [
      Object {
        "label": "Child A",
        "route": Object {
          "condition": [Function],
          "path": "/child/a",
        },
        "to": "/child/a",
      },
      Object {
        "label": "Child C",
        "route": Object {
          "condition": [Function],
          "path": "/child/c",
        },
        "to": "/child/c",
      },
    ],
    "label": "With Children",
    "route": Object {
      "condition": [Function],
      "path": "/with/children",
    },
    "to": "/with/children",
  },
  Object {
    "label": "No Condition",
    "route": Object {
      "path": "/no/condition",
    },
    "to": "/no/condition",
  },
]
`;

exports[`NavItems Selectors should remove item if the nav blocks it 1`] = `
Array [
  Object {
    "label": "No Children",
    "route": Object {
      "condition": [Function],
      "path": "/no/children",
    },
    "to": "/no/children",
  },
  Object {
    "children": Array [
      Object {
        "label": "Child A",
        "route": Object {
          "condition": [Function],
          "path": "/child/a",
        },
        "to": "/child/a",
      },
      Object {
        "label": "Child B",
        "route": Object {
          "condition": [Function],
          "path": "/child/b",
        },
        "to": "/child/b",
      },
      Object {
        "label": "Child C",
        "route": Object {
          "condition": [Function],
          "path": "/child/c",
        },
        "to": "/child/c",
      },
    ],
    "label": "With Children",
    "route": Object {
      "condition": [Function],
      "path": "/with/children",
    },
    "to": "/with/children",
  },
  Object {
    "label": "No Condition",
    "route": Object {
      "path": "/no/condition",
    },
    "to": "/no/condition",
  },
]
`;

exports[`NavItems Selectors should select all nav items if none are blocked 1`] = `
Array [
  Object {
    "label": "No Children",
    "route": Object {
      "condition": [Function],
      "path": "/no/children",
    },
    "to": "/no/children",
  },
  Object {
    "condition": [Function],
    "label": "With Nav Condition",
    "route": Object {
      "path": "/nav/condition",
    },
    "to": "/nav/condition",
  },
  Object {
    "children": Array [
      Object {
        "label": "Child A",
        "route": Object {
          "condition": [Function],
          "path": "/child/a",
        },
        "to": "/child/a",
      },
      Object {
        "label": "Child B",
        "route": Object {
          "condition": [Function],
          "path": "/child/b",
        },
        "to": "/child/b",
      },
      Object {
        "label": "Child C",
        "route": Object {
          "condition": [Function],
          "path": "/child/c",
        },
        "to": "/child/c",
      },
    ],
    "label": "With Children",
    "route": Object {
      "condition": [Function],
      "path": "/with/children",
    },
    "to": "/with/children",
  },
  Object {
    "label": "No Condition",
    "route": Object {
      "path": "/no/condition",
    },
    "to": "/no/condition",
  },
]
`;
